<resources>
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="app_name">Турубчук Андрей</string>
    <string name="user.profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog_camera">Сделать снимок из камеры</string>
    <string name="user_profile_dialog_cancel">Отменить</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_choose_message">Выберите фото</string>
    <string name="user_text_VK">vk.com/id61945030</string>
    <string name="user_text_git">https://github.com/AndreyTurubchuk/DevIntensive</string>
    <string name="user_hint_git">Репозиторий</string>
    <string name="user_hint_VK">Профиль в VK</string>
    <string name="user_text_email">antur1977@rambler.ru</string>
    <string name="user_hint_email">E-mail</string>
    <string name="user_text_phone">8-911-592-00-00</string>
    <string name="user_hint_phone">Мобильный</string>
    <string name="hint_password">Пароль</string>
    <string name="login_btn_text">Войти</string>
    <string name="login_forgot_passwd">Забыли пароль?</string>
    <string name="login_main_text">Войти</string>
    <string name="hint_email">E-mail</string>
    <string name="text_email">example.com</string>

    <!-- AuthActivity -->
    <string name="auth.authorization_enter">Войти</string>
    <string name="auth.email">Введите e-mail</string>
    <string name="auth.password">Введите пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>
</resources>
